# rust_matrix_client

./: Cargo.toml
src/: app.rs  event.rs  io.rs  log.rs  main.rs  remote_server.rs  sequence_number.rs
src/input/: command.rs  editable_text.rs  mod.rs
src/room/: event.rs  mod.rs  ui.rs
src/room/net/: app.rs  matrix.rs  mod.rs
src/text/: editable_text.rs  line.rs  mod.rs
src/widget/: horizontal.rs  mod.rs  room_entry.rs  scroll.rs  text.rs
