[package]
name = "rust_matrix_client"
version = "0.1.0"
authors = ["Igor Valet <igor_valet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0"
termion = "1"
unicode-width = "0"
itertools = "0"
hyper = "0"
ruma-client = { git = "https://github.com/ruma/ruma-client.git" }
futures-util = "0"
ruma-identifiers = "0"
