[package]
name = "rust_matrix_client"
version = "0.1.0"
authors = ["Igor Valet <igor_valet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
futures-util = "0"
itertools = "0"
hyper = "0"
hyper-tls = "0"
ruma-client = "0.3"
ruma-identifiers = "0.14"
ruma-events = "0.15"
ruma-client-api = "0.6"
termion = "1"
tokio = { version = "0.2", features = ["full"] }
tokio-timer = "0.2"
tui = "0"
unicode-width = "0"
url = "2"
